Fix firefox table alignment

--- a/kalite/coachreports/static/css/coachreports/test_view.css
+++ b/kalite/coachreports/static/css/coachreports/test_view.css
@@ -2,6 +2,7 @@ th, td {
     border: 1px solid black;
     padding: 4px;
     height: 27px;
+    vertical-align: middle;
 }
 
 .table-container {
